--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@ border-radius: 100%;"><img src="/sitewideimg.png"></a>
       
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
                   
-    <a href="https://www.instagram.com/elilorenart" class="link" target="_blank">Instagram</a> 
+    <a href="https://eliloren.com/art" class="link" target="_blank">My Art</a> 
 	    	    	    	    
     <a href="https://myanimelist.net/profile/eliloren" class="link" target="_blank">My Anime List</a>
         
