--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@ border-radius: 100%;"><img src="/sitewideimg.png"></a>
     
     <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOXI<br>coder, doodler, polyglot, true crime nerd</p>
 	    
-	    <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Remaking Art Website</p>
+	    <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>
       
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
                   
