--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,11 +63,15 @@ border-radius: 100%;"><img src="/sitewideimg.png"></a>
     <h1 style="text-transform:uppercase;">Eli Loren</h1>
       
           <div class="divider"></div>
+	    
     
     <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOXI<br>coder, doodler, polyglot, true crime nerd</p>
 	    
 	    <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>
-      
+	    
+	    <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;"><script type="text/javascript" src="//counter.websiteout.net/js/24/0/0/0"></script></p>
+
+ 
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
                   
     <a href="https://eliloren.com/art" class="link">My Art</a> 
