--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 display: block;
 margin-left: auto;
 margin-right: auto;
-border-radius: 100%;"><img src="/sitewideimg.png"></a>
+border-radius: 100%;"><img src="/sitewideimg.png" class="logo"></a>
 
     <h1 style="text-transform:uppercase;">Eli Loren</h1>
       
