--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@ body {
    transition: all .3s;
 }
 
+p, li, span, a {
+   font-size:16px;
+}
+
 div.links {
    padding:20px 20px 0 20px;
    width: 680px;
