--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,8 @@
             </a>
             <h1 style="text-transform:uppercase;">Eli Loren</h1>
             <div class="divider"></div>
-            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOXI <br>coder, doodler, polyglot, true crime nerd </p>
-            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>
+            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOXI <br>coder, doodler, polyglot, true crime fan </p>
+            <!--<p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>-->
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
             <a href="https://eliloren.com/art" class="link">My Art</a>
             <a href="https://myanimelist.net/profile/eliloren" class="link" target="_blank">My Anime List</a>
