--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,8 +59,8 @@
             <a href="https://steamcommunity.com/id/eliloren" class="link" target="_blank">Steam</a>
             <a href="https://www.duolingo.com/profile/eliloren" class="link" target="_blank">Duolingo</a>
             <a href="https://open.spotify.com/user/31xezqay72khqaa2awc3cm7rgr2a?si=3d3ff9bb8718489e" class="link" target="_blank">Spotify</a>
-            <a href="https://reddit.com/u/eliloren" class="link" target="_blank">Reddit</a>
-            <a href="https://www.personality-database.com/user/490785" class="link" target="_blank">PDB</a>
+            <!--<a href="https://reddit.com/u/eliloren" class="link" target="_blank">Reddit</a>
+            <a href="https://www.personality-database.com/user/490785" class="link" target="_blank">PDB</a>-->
             <a href="https://bit.ly/3k8LsRM" class="link" target="_blank">Mass Killers</a>
          </div>
       </div>
