--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
             <a href="/" style="width: 150px;display: block;margin-left: auto;margin-right: auto;border-radius: 100%;">
                <img src="/sitewideimg.png" class="logo">
             </a>
-            <h1 style="text-transform:uppercase;">Eli Loren</h1>
+            <a href="/"><h1 style="text-transform:uppercase;">Eli Loren</h1></a>
             <div class="divider"></div>
             <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOEI 4w5 459 <br>coder, doodler, polyglot, true crime fan </p>
             <!--<p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>-->
