--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
             </a>
             <a href="/"><h1 style="text-transform:uppercase;">Eli Loren</h1></a>
             <div class="divider"></div>
-            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOEI 4w5 459 <br>coder, doodler, polyglot, true crime fan<br> In a relationship ♥ </p>
+            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOEI 459 <br>coder, doodler, polyglot, true crime fan<br> In a relationship ♥ </p>
             <!--<p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>-->
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
             <a href="https://eliloren.com/art" class="link">My Art</a>
