--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
             <!--<p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>-->
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
             <a href="https://eliloren.com/art" class="link">My Art</a>
+            <a href="https://eliloren.com/style" class="link">My Style</a>
             <a href="https://myanimelist.net/profile/eliloren" class="link" target="_blank">My Anime List</a>
             <a href="https://letterboxd.com/eliloren" class="link" target="_blank">Letterboxd</a>
             <a href="https://goodreads.com/eliloren" class="link" target="_blank">Goodreads</a>
