--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,15 @@
             <a href="/"><h1 style="text-transform:uppercase;">Eli Loren</h1></a>
             <div class="divider"></div>
             <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">CS RLOEI 459 <br>coder, doodler, multilingual, true crime fan<br> In a relationship ♥ </p>
+            
+            <div id="text" class="hidden">
+        <p>More information goes here.</p>
+        <p>More information goes here. ♡</p>
+
+      </div>
+        <p id="less" class="hidden"><a>Show less</a></p>
+        <p id="more"><a>Show more</a></p>       
+            
             <!--<p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>-->
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
             <a href="https://eliloren.com/art" class="link">My Art</a>
