--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,8 @@
         <p>More information goes here. ♡</p>
 
       </div>
-        <p id="less" class="hidden"><a>Show less</a></p>
-        <p id="more"><a>Show more</a></p>       
+        <p id="less" class="hidden" style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;"><a>Show less</a></p>
+        <p id="more" style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;"><a>Show more</a></p>       
             
             <!--<p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">Status: Made New Art Website!</p>-->
             <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
