--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
             <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">coder, doodler, multilingual, true crime fan<br> In a relationship ♡ </p>
             
             <div id="text" class="hidden">
-        <p>I'm a web developer, hobby artist, and fan of anime, anthro characters, and true crime. I speak English and Spanish fluently and love studying other languages, especially German and French. In the Big Five personality system, I'm RLOEI (very low extroversion, high neuroticism, high conscientiousness, low agreeablness, and high openness to experience). In DiSC, I'm CS, which is the Melancholic-Phlegmatic temperament. I'm engaged to my boyfriend of 5 years. ♡</p>
+        <p>I'm a web developer, hobby artist, and fan of anime, anthro characters, and true crime. I speak English and Spanish fluently and love studying other languages, especially German and French. In the Big Five personality system, I'm RLOEI (very low extroversion, high neuroticism, high conscientiousness, low agreeablness, and high openness to experience). In the DiSC assessment, I'm CS, which is the Melancholic-Phlegmatic temperament. I'm engaged to my boyfriend of 5 years. ♡</p>
         <p>I don't like social media, so I decided to make my own galleries for my art and outfits to replace my Instagram.</p>
 
       </div>
