--- a/index.css
+++ b/index.css
@@ -123,6 +123,10 @@ a.desktop:hover, a.desktop:active, a.desktop:focus, p a:hover, p a:active, p a:f
     text-decoration:none!important;
 }
 
+a:hover, a:active, a:focus {
+text-decoration:none!important;
+}
+
 .hidden {
 	display:none;
 }
