--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,11 +49,12 @@
             </a>
             <a href="/"><h1 style="text-transform:uppercase;">Eli Loren</h1></a>
             <div class="divider"></div>
-            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">coder, doodler, multilingual, true crime fan<br> In a relationship ♡ </p>
+            <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">multilingual, coder, doodler<br> In a relationship ♡ </p>
             
             <div id="text" class="hidden">
-        <p>I'm a web developer, hobby artist, and fan of anime, anthro characters, and true crime. I speak English and Spanish fluently and love studying other languages, especially German and French. In the Big Five personality system, I'm RLOEI (very low extroversion, high neuroticism, high conscientiousness, low agreeablness, and high openness to experience). In the DiSC assessment, I'm CS, which is the Melancholic-Phlegmatic temperament. I'm engaged to my boyfriend of 5 years. ♡</p>
-        <p>I don't like social media, so I decided to make my own galleries for my art and outfits to replace my Instagram.</p>
+        <p>I'm a web developer, hobby artist, and polyglot. I like alt fashion, weight loss, games, animanga, animals, bugs, dragons, anthro characters, history, and true crime. I speak English and Spanish fluently and love studying German and French. I'm engaged to my boyfriend of 5 years. ♡</p> 
+        <p>Any pronouns are fine. I'm an atheist. In the Big Five personality system, I'm RLOEI (very low extroversion, high neuroticism, high conscientiousness, low agreeableness, and high openness to experience). In the DiSC assessment, I'm CS, which is equivalent to the Melancholic-Phlegmatic temperament. </p>
+        <p>I don't like social media because I'm not interested in politics and comparing myself to others, so I decided to make my own galleries for my art and outfits to replace my Instagram.</p>
 
       </div>
         <p id="less" class="hidden" style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;"><a>Show less</a></p>
