--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,9 @@
             <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;">multilingual, coder, doodler<br> In a relationship ♡ </p>
             
             <div id="text" class="hidden">
-        <p>I'm a web developer, hobby artist, and polyglot. I like alt fashion, weight loss, games, animanga, animals, bugs, dragons, anthro characters, history, and true crime. I speak English and Spanish fluently and love studying German and French. I'm engaged to my boyfriend of 5 years. ♡</p> 
-        <p>Any pronouns are fine. I'm an atheist. In the Big Five personality system, I'm RLOEI (very low extroversion, high neuroticism, high conscientiousness, low agreeableness, and high openness to experience). In the DiSC assessment, I'm CS, which is equivalent to the Melancholic-Phlegmatic temperament. </p>
-        <p>I don't like social media because I'm not interested in politics and comparing myself to others, so I decided to make my own galleries for my art and outfits to replace my Instagram.</p>
+        <p>I'm a web developer, hobby artist, and polyglot. I like alt fashion, weight loss, games, animanga, animals, bugs, dragons, anthro characters, history, and true crime. I speak English and Spanish fluently and enjoy studying German and French the most. I love my birds! I'm engaged to my boyfriend of 5 years. ♡</p> 
+        <p>Any pronouns are fine. I'm an atheist. I also have mild social anxiety. In the Big Five personality system, I'm RLOEI (very low extroversion, high neuroticism, high conscientiousness, low agreeableness, and high openness to experience). In the DiSC assessment, I'm CS, which is equivalent to the Melancholic-Phlegmatic temperament. In Enneagram, I might be a 4, 5, 6, or 9.</p>
+        <p>I prefer smaller niche forums over the popular social media platforms because I'm not interested in drama, politics, and comparing myself to others. To replace my Instagram, I made my own gallery pages from scratch to showcase my art and personal style. I am also making several spreadsheets of my interests.</p>
 
       </div>
         <p id="less" class="hidden" style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;"><a>Show less</a></p>
