--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <meta name="image" property="og:image" content="https://eliloren.github.io/sitewideimg.png">
       <meta name="description" property="og:description" content="{{ site.description }}">
       <meta name="title" property="og:title" content="{{ site.title }}">
-      <meta name="keywords" content="pastelhex">
+      <meta name="keywords" content="eli loren">
       <meta name="author" content="{{ site.author_name }}">
       <meta name="twitter" content="{{ site.username }}">
       <meta name="github" content="{{ site.username }}">
