--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
             <a href="https://steamcommunity.com/id/eliloren" class="link" target="_blank">Steam</a>
             <a href="https://www.duolingo.com/profile/eliloren" class="link" target="_blank">Duolingo</a>
             <a href="https://open.spotify.com/user/31xezqay72khqaa2awc3cm7rgr2a?si=3d3ff9bb8718489e" class="link" target="_blank">Spotify</a>
+            <a href="https://www.personality-database.com/user/490785" class="link" target="_blank">PDB</a>
             <a href="https://pinterest.com/elilorenart" class="link" target="_blank">Pinterest</a>
             <!--<a href="https://reddit.com/u/eliloren" class="link" target="_blank">Reddit</a>
             <a href="https://www.personality-database.com/user/490785" class="link" target="_blank">PDB</a>-->
