--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,7 @@
             <a href="https://www.personality-database.com/user/490785" class="link" target="_blank">PDB</a>
             <a href="https://pinterest.com/elilorenart" class="link" target="_blank">Pinterest</a>
             <!--<a href="https://reddit.com/u/eliloren" class="link" target="_blank">Reddit</a>
-            <a href="https://www.personality-database.com/user/490785" class="link" target="_blank">PDB</a>-->
-            <a href="https://bit.ly/3k8LsRM" class="link" target="_blank">Mass Killers</a>
+            <a href="https://bit.ly/3k8LsRM" class="link" target="_blank">Mass Killers</a>-->
          </div>
       </div>
       <script src="/mode-switcher.js"></script>
