--- a/index.css
+++ b/index.css
@@ -127,6 +127,11 @@ a:hover, a:active, a:focus {
 text-decoration:none!important;
 }
 
+#text {
+	padding:1rem;
+background-color:var(--white-color);
+}
+
 .hidden {
 	display:none;
 }
@@ -136,7 +141,7 @@ html[data-theme="light"] {
 	--text-color: #000000;
 	--accent-color: #7926DC;
 	--card-color: #DEEEE4;
-	--white-color: #ffffff;
+	--white-color: whitesmoke;
 	--black-color: black;
 	--bg-color: #DEEEE4;
 	--shadows: rgba(125, 138, 124, 0.23);
@@ -167,7 +172,7 @@ html[data-theme="dark"] {
 		--text-color: #000000;
 		--accent-color: #7926DC;
 		--card-color: #DEEEE4;
-		--white-color: #ffffff;
+		--white-color: whitesmoke;
 		--black-color: black;
 		--bg-color: #DEEEE4;
 		--shadows: rgba(125, 138, 124, 0.23);
