--- a/index.css
+++ b/index.css
@@ -130,7 +130,7 @@ text-decoration:none!important;
 #text {
 	border-radius:15px;
 	padding:20px;
-        background-color:var(--white-color);
+        background-color:var(--bio);
 }
 
 .hidden {
@@ -145,6 +145,7 @@ html[data-theme="light"] {
 	--white-color: whitesmoke;
 	--black-color: black;
 	--bg-color: #DEEEE4;
+	--bio:rgba(255,255,255,.5);
 	--shadows: rgba(125, 138, 124, 0.23);
 }
 
@@ -155,7 +156,8 @@ html[data-theme="dark"] {
 	--white-color: #0b0317;
 	--black-color: black;
 	--bg-color: #1c1238;
-	--shadows: rgba(1, 0, 19, 0.23);
+	--bio:rgba(11,3,23,.5);
+	--shadows: rgba(1, 0, 19, 0.23);	
 }
 
 @media (prefers-color-scheme: dark) {
@@ -167,6 +169,7 @@ html[data-theme="dark"] {
 		--white-color: #0b0317;
 		--black-color: black;
 		--bg-color: #1c1238;
+		--bio:rgba(11,3,23,.5);
 		--shadows: rgba(1, 0, 19, 0.23);
 	}
 	html[data-theme="light"] {
@@ -176,7 +179,8 @@ html[data-theme="dark"] {
 		--white-color: whitesmoke;
 		--black-color: black;
 		--bg-color: #DEEEE4;
-		--shadows: rgba(125, 138, 124, 0.23);
+		--bio:rgba(255,255,255,.5);
+		--shadows: rgba(125, 138, 124, 0.23);		
 	}
 }
 
